# Turing-Bot-Updated

./: .gitignore  README.md  pyproject.toml
Turing-Bot-Updated/: main.py
Turing-Bot-Updated/bot/: bot.py
Turing-Bot-Updated/bot/cogs/moderation/: ban.py  purge.py  timeout.py  unban.py  untimeout.py
Turing-Bot-Updated/bot/cogs/turing/: question.py  scoring.py  submit.py
Turing-Bot-Updated/bot/utils/: embed.py
